 - dist command learned to --builddir option to place build files in a specific directory
 - version command learned the --dist option for outputting the version in version-status format
 - reset command learned --autologon option to automatically set up admin sessions in a web browser
 - Added test prerequisites and resources metadata to Build.PL

0.4.0 - Sep 03 2009
 - Full POD coverage of API added
 - include real README file instead of autogenerating one
 - Fixed processing of config option on Reset or any other command
 - Breaking change: WGDev::Command::Base's option_parse_config method is now config_parse_options
 - Breaking change: WGDev::Command::Base's option_config method is now config_options
 - Automatic checking for .conf file if extension omitted
 - Sitename can now be specified instead of a config file
 - Always use UTF-8 character set when running mysql commands
 - WGDev, WGDev::Command, and WGDev::Command::Base version numbers will now by kept in sync
 - WGDev::Command::run will now run properly when a WebGUI root and config file aren't available
 - WGDev::Command::run and WGDev::Command::Base::run will no longer exit, but will return true on success
 - WGDev no longer tries to autodetect a single config file for safety reasons
 - Single file install now uses a compressed archive rather than reformatted Perl code
 - All uses of croak and die have been converted to use exceptions instead
 - Full trace is shown for errors if WGDEV_DEBUG is set
 - More complete test coverage
 - --help option will now reports improved, more unified usage summary
 - Help command now produces better user documentation
 - Help command now works when run as root
 - Intro command added with documentation for new users
 - Commands command added with command list and brief documentation
 - Mail command added for testing WebGUI's mail APIs
 - Setting command added for listing settings and showing or setting their value